@@ -11,7 +11,7 @@
   @extend .card;
   @extend .col-md-9;
   padding-bottom: 40px;
-  @extend .bg-faded;
+  @extend .bg-light;
   @extend .small;
 }
 .authform .right {
