@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "1.0.41"
+  VERSION = "1.0.42"
 end
